# manamind

./: .actrc  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  PRD_ProjectManaMind.md  README.md  ci_diagnostics_report.md  pyproject.toml  setup.cfg
.github/: README.md
.github/workflows/: test.yml
configs/: base.yaml
docker/: Dockerfile  docker-compose.yml
docs/: game_state_architecture.md
examples/: game_state_usage.py
scripts/: local-ci-check.sh  setup.sh
src/manamind/: __init__.py
src/manamind/cli/: __init__.py  main.py
src/manamind/core/: __init__.py  action.py  agent.py  game_state.py  state_manager.py
src/manamind/forge_interface/: __init__.py  forge_client.py
src/manamind/models/: __init__.py  components.py  enhanced_encoder.py  policy_value_network.py
src/manamind/training/: __init__.py  self_play.py
src/manamind/utils/: __init__.py  config.py
tests/: __init__.py  test_ability_actions.py  test_action.py  test_basic_actions.py  test_combat_actions.py  test_game_state.py  test_targeting_actions.py
tests/integration/: test_core_integration.py
tests/unit/: test_action.py  test_agent.py  test_game_state.py
